QA improvements